@@ -7,6 +7,7 @@ import com.arpanbags.products.arpanbagsproducts.entity.OrderItem;
 import com.arpanbags.products.arpanbagsproducts.entity.Orders;
 import com.arpanbags.products.arpanbagsproducts.entity.ProductsType;
 import com.arpanbags.products.arpanbagsproducts.enums.OrderStatus;
+import com.arpanbags.products.arpanbagsproducts.mapper.OrderItemMapper;
 import com.arpanbags.products.arpanbagsproducts.mapper.OrderMapper;
 import com.arpanbags.products.arpanbagsproducts.repository.OrderItemRepository;
 import com.arpanbags.products.arpanbagsproducts.repository.OrderRepository;
@@ -14,9 +15,8 @@ import com.arpanbags.products.arpanbagsproducts.repository.ProductsTypeRepositor
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,42 +37,35 @@ public class OrderService {
         order.setOrderNumber("ORDER_ID_" + UUID.randomUUID().toString().substring(0, 8).toUpperCase());
 
         for (OrderItemDTO itemDTO : orderDto.getItemDTOs()) {
-            ProductsType productsType = productsTypeRepository.findById(itemDTO.getProductId())
+            ProductsType productsType = productsTypeRepository.findById(itemDTO.getProductID())
                     .orElseThrow(() -> new RuntimeException("Product not found"));
 
             OrderItem item = new OrderItem();
-            item.setProductType(productsType);
+            item.setProduct(productsType);
             item.setQuantity(itemDTO.getQuantity());
-
             order.addOrderItem(item); // also sets item.setOrder(order)
         }
-
-        // Save order — will also save item1 because of CascadeType.ALL
         return OrderMapper.INSTANCE.toOrderDTO(orderRepository.save(order));
-        /*orderItemRepository.saveAll(order.getItems());
-      //  OrderDTO savedOrder= OrderMapper.INSTANCE.toOrderDTO(orderRepository.save(OrderMapper.INSTANCE.toOrders(orderDto)));
-         */
     }
-
-    /*private List<OrderItem> setCartItemsDTO(List<OrderItemDTO> items) {
-        return items.stream().map(itemDTO->{
-            OrderItem orderItem = new OrderItem();
-            orderItem.setId(itemDTO.getId());
-            orderItem.setPrice(itemDTO.getPrice());
-            orderItem.setQuantity(itemDTO.getQuantity());
-            orderItem.setProductName(itemDTO.getProductName());
-            return orderItem;
-        }).collect(Collectors.toList());
-
-    }*/
 
     public Optional<Orders> getOrderById(Long id) {
         return orderRepository.findById(id);
     }
 
     public List<OrderDTO> getAllOrders() {
-        return orderRepository.findAll().stream().map(order -> OrderMapper.INSTANCE.toOrderDTO(order)).toList();
+        return orderRepository.findAll().stream()
+                .map(order -> {
+                    Set<OrderItemDTO> itemDTOs = order.getItems().stream()
+                            .map(OrderItemMapper.INSTANCE::toOrderItemDTO)
+                            .collect(Collectors.toSet());
+                    // Convert Order to DTO
+                    OrderDTO orderDTO = OrderMapper.INSTANCE.toOrderDTO(order);
+                    orderDTO.setItemDTOs(new ArrayList<>(itemDTOs));
+                    return orderDTO;
+                })
+                .collect(Collectors.toList());
     }
+
 
     public Orders updateOrder(Orders order) {
         return orderRepository.save(order);
